# task-queue

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  run_tests.sh  task-20260202-030504-add-high-priority-cli-commands.md  task-monitor.service  task-queue.service
job_monitor/: __init__.py  cli.py  job_executor.py  models.py  monitor_daemon.py
job_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
task_monitor/: __init__.py  cli.py  models.py  monitor_daemon.py  task_executor.py
task_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
task_queue/: __init__.py  atomic.py  cli.py  config.py  coordinator.py  daemon.py  executor.py  models.py  monitor.py  monitor_daemon.py  processor.py  scanner.py  task_executor.py  task_runner.py  watchdog.py
task_queue.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_cli.py  test_cli_commands.py  test_cli_comprehensive.py  test_cli_coverage.py  test_config.py  test_config_comprehensive.py  test_daemon_parallel.py  test_executor.py  test_file_utils.py  test_file_utils_comprehensive.py  test_integration.py  test_job_executor.py  test_models.py  test_monitor_daemon.py  test_scanner_coverage.py  test_task_runner.py  test_watchdog_coverage.py
